# Smart_Home_System

./: LICENSE  README.md  README.txt  presentation_link.txt
SmartHomeCodeC++/include/: recieve.h  serial.h
SmartHomeCodeC++/src/: main.cpp  recieve.cpp
SmartHome_Only_Cpp_Part/include/: gpio.h  recieve.h
SmartHome_Only_Cpp_Part/src/: gpio.cpp  main.cpp  recieve.cpp  serial.cpp
SmartHome_Qt_Real/: CMakeLists.txt  gpio.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialreader.h
SmartHome_Yocto/Yocto/qt-app/: qt-app.bb
SmartHome_Yocto/Yocto/qt-app/files/: gpio.cpp  gpio.h  main.cpp  mainwindow.cpp  qt-app.service  read_all_gpio.service  read_all_gpio.sh  resources.qrc  serialreader.cpp
SmartHome_Yocto/Yocto/smartsensors/: smartsensors_0.1.bb
SmartHome_Yocto/Yocto/smartsensors/files/: Makefile  gpio.cpp  gpio.h  main.cpp  recieve.cpp  recieve.h  serial.cpp  smartsensors  smartsensors.service
qt_kiosk_dashboard_testing/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
smart_home_final/: README.txt  arduino_sensors.ino  camera_stream.py  led_control.py  mjpg-streamer.service  mqtt_simulator_arduino.ino  node-red.service  readme_setup.txt  smart_home.service  smart_home_pi.py  start_all.sh
videos/: officalQTdashboard.webm  whatsappAlertsTest.webm
